<resources>
    <string name="app_name">BMI</string>
    <string name="hello_world">Hello world!</string>
    <string name="source_code">Get the source code</string>
    <string name="title_activity_main">BMI Calculator</string>
    <string name="imperial">Imperial (pounds and inches)</string>
    <string name="metric">Metric (kilograms and centimeters)</string>
    <string name="choose_unit">Please choose the desired unit of measurement</string>
    <string name="input_data_text">Please fill in all the fields</string>
    <string name="calculate">Calculate</string>
    <string name="metric_your_height">Your height (cm):</string>
    <string name="metric_your_weight">Your weight (kg):</string>
    <string name="imperial_your_height">Your height (in):</string>
    <string name="imperial_your_weight">Your weight (lb):</string>
    <string name="invalid">Invalid input data</string>
    <string name="ok">OK</string>
    <string name="result_header">Your BMI is: %.0f</string>
    <string name="about">About</string>
    <string name="about_text">BMI calculator\nversion 1.0\nOctober 2012</string>
    <string name="classification">BMI classification</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese">Obese</string>
    <string name="lt10">&lt; 20</string>
    <string name="lt25">20 &#8211; 25</string>
    <string name="lt30">25 &#8211; 30</string>
    <string name="gt30">&gt; 30</string>
    <string name="empty"/>
</resources>