<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/choose_unit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/choose_unit"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/choose_imperial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/choose_unit_text"
        android:layout_marginTop="10dip"
        android:text="@string/imperial" />

    <Button
        android:id="@+id/choose_metric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/choose_imperial"
        android:layout_marginTop="10dip"
        android:text="@string/metric" />

</RelativeLayout>
